--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ backcall==0.2.0
 base58==2.1.0
 bleach==3.3.1
 blinker==1.4
+branca==0.4.2
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
@@ -16,6 +17,7 @@ debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
+folium==0.12.1
 gitdb==4.0.7
 GitPython==3.1.18
 idna==3.2
