--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ Send2Trash==1.7.1
 six==1.16.0
 smmap==4.0.0
 streamlit==0.85.1
+streamlit-folium==0.4.0
 terminado==0.10.1
 testpath==0.5.0
 toml==0.10.2
