--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
 click==7.1.2
+cycler==0.10.0
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
@@ -32,7 +33,9 @@ jupyter-client==6.1.12
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
 MarkupSafe==2.0.1
+matplotlib==3.4.2
 matplotlib-inline==0.1.2
 mistune==0.8.4
 nbclient==0.5.3
