--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ nest-asyncio==1.5.1
 networkx==2.6.2
 notebook==6.4.0
 numpy==1.21.1
+nx-altair==0.1.6
 packaging==21.0
 pandas==1.3.1
 pandocfilters==1.4.3
