--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ async-generator==1.10
 attrs==21.2.0
 backcall==0.2.0
 base58==2.1.0
-bleach==3.3.1
+bleach==4.0.0
 blinker==1.4
+bokeh==2.2.0
 branca==0.4.2
 cachetools==4.2.2
 certifi==2021.5.30
@@ -43,9 +44,8 @@ nbconvert==6.1.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
 networkx==2.6.2
-notebook==6.4.0
+notebook==6.4.2
 numpy==1.21.1
-nx-altair==0.1.6
 packaging==21.0
 pandas==1.3.1
 pandocfilters==1.4.3
@@ -65,12 +65,13 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.1
-pyzmq==22.1.0
+PyYAML==5.4.1
+pyzmq==22.2.1
 requests==2.26.0
 Send2Trash==1.7.1
 six==1.16.0
 smmap==4.0.0
-streamlit==0.85.1
+streamlit==0.82.0
 streamlit-folium==0.4.0
 terminado==0.10.1
 testpath==0.5.0
@@ -79,6 +80,7 @@ toolz==0.11.1
 tornado==6.1
 tqdm==4.62.0
 traitlets==5.0.5
+typing-extensions==3.10.0.0
 tzlocal==2.1
 urllib3==1.26.6
 validators==0.18.2
