--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ backcall==0.2.0
 base58==2.1.0
 bleach==4.0.0
 blinker==1.4
-bokeh==2.2.0
+bokeh==2.2.2
 branca==0.4.2
 cachetools==4.2.2
 certifi==2021.5.30
@@ -35,6 +35,7 @@ jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
+Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
@@ -71,7 +72,7 @@ requests==2.26.0
 Send2Trash==1.7.1
 six==1.16.0
 smmap==4.0.0
-streamlit==0.82.0
+streamlit==0.86.0
 streamlit-folium==0.4.0
 terminado==0.10.1
 testpath==0.5.0
